--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -19,7 +19,7 @@ padding-left : 5%
 </head>
 <body>
 <form action = "/products.do", method ="get"></form>
-<div class="w3-padding-16"></div>
+<!--<div class="w3-padding-16"></div>
 <div class="w3-margin-left w3-padding-16" id="product">
         <span class="w3-xxlarge w3-padding-64" ><b>제품 한눈에 보기</b>
         </span>
@@ -27,7 +27,7 @@ padding-left : 5%
 <div class="w3-margin-left w3-large">
   <b class="w3-margin-left">카테고리</b>
 
-  <!--first button line -->
+  &lt;!&ndash;first button line &ndash;&gt;
 
   <div class="w3-row w3-center w3-small  w3-margin-top">
     <div class="w3-col s4 w3-third w3-container w3-margin-bottom">
@@ -40,7 +40,7 @@ padding-left : 5%
       <button class="w3-button w3-padding-small w3-border w3-round-xlarge" style="width:100%"><b>아이스크림</b></button>
     </div>
   </div>
-  <!--second button line -->
+  &lt;!&ndash;second button line &ndash;&gt;
   <div class="w3-row w3-center w3-small">
     <div class="w3-col s4 w3-third w3-container w3-margin-bottom">
       <button class="w3-button w3-padding-small w3-border w3-round-xlarge" style="width:100%"><b>빵</b></button>
@@ -54,7 +54,7 @@ padding-left : 5%
   </div>
 
 
-  <!--third button line -->
+  &lt;!&ndash;third button line &ndash;&gt;
   <div class="w3-row w3-center w3-small">
     <div class="w3-col s4 w3-third w3-container w3-margin-bottom">
       <button class="w3-button w3-padding-small w3-border w3-round-xlarge" style="width:100%"><b>음료</b></button>
@@ -69,7 +69,7 @@ padding-left : 5%
 </div>
 </div>
 <div class="w3-margin-top"></div>
-<!-- 최신순/인기순 dropdown-->
+&lt;!&ndash; 최신순/인기순 dropdown&ndash;&gt;
 <div class="w3-dropdown-click w3-right w3-margin-right w3-small">
   <button onclick="myFunction()" class="w3-button w3-round-large"><b>신상품</b></button>
   <div id="Demo" class="w3-dropdown-content w3-bar-block w3-border">
@@ -100,6 +100,8 @@ function myFunction() {
   </tr>
 </table>
 
-</div>
+</div>-->
+
+<p> 상품 페이지 </p>
 </body>
 </html>
